# rust-htmx

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json
src/: main.rs
style/: tailwind.css
templates/: index.html  todo_list_item.html
